Optimise styles for mobile screens

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -21,7 +21,7 @@
 .mobile{
   display:none;
   @media (max-width:742px) {
-    display:flex;
+    display:inline;
     width:100%;
     justify-content: center;
     align-items: center;
